--- a/front/src/components/UI/Button/Button.css
+++ b/front/src/components/UI/Button/Button.css
@@ -1,23 +1,26 @@
 .Button {
   background-color: transparent;
-  border: none;
+  text-align: center;
+  border: 2px solid bisque;
   color: white;
   outline: none;
   cursor: pointer;
   font: inherit;
-  padding: 10px;
+  padding: 20px;
   margin: 10px;
   font-weight: bold;
 }
 
-.Button:first-of-type {
-  margin-left: 0;
-  padding-left: 0;
-}
-
 .Button:disabled {
   color: #ccc;
+  background-color: white;
+  border: 2px solid #eee;
   cursor: not-allowed;
+}
+
+.Button:hover:enabled {
+  background-color: bisque;
+  border: 2px solid #3399ff;
 }
 
 .Success {
